# veh-debugger

./: .gitignore  CMakeLists.txt  OVERVIEW.md  README.en.md  README.md
.github/workflows/: build.yml
extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts
src/adapter/: CMakeLists.txt  dap_server.cpp  dap_server.h  dap_types.h  disassembler.cpp  disassembler.h  injector.cpp  injector.h  main.cpp  pipe_client.cpp  pipe_client.h  symbol_engine.cpp  symbol_engine.h  transport.cpp  transport.h  zydis_disassembler.cpp
src/common/: ipc_protocol.h  logger.h
src/dll/: CMakeLists.txt  breakpoint.cpp  breakpoint.h  dllmain.cpp  hw_breakpoint.cpp  hw_breakpoint.h  memory.cpp  memory.h  pipe_server.cpp  pipe_server.h  stack_walk.cpp  stack_walk.h  syscall_resolver.cpp  syscall_resolver.h  threads.cpp  threads.h  veh_handler.cpp  veh_handler.h
src/mcp/: CMakeLists.txt  batch_executor.cpp  batch_executor.h  debug_session.cpp  debug_session.h  installer.cpp  installer.h  main.cpp  mcp_server.cpp  mcp_server.h
test/: CMakeLists.txt  TEST_GUIDE.md  test_batch.py  test_batch_pass_exception.py  test_bp_masking.py  test_crackme_debug.py  test_evaluate_edge.py  test_launch_errors.py  test_mcp_deep.py  test_mcp_launch.py  test_mcp_new_features.py  test_mcp_new_tools.py  test_mcp_stepover.py  test_mcp_trace_callers.py  test_register_syntax.py  test_register_syntax_v2.py  test_source_bp_edge.py  test_source_bp_nopdb.py  test_step.py  test_stepin.py  test_stress_new_features.py  test_target.c
test/challenges/crackme/: README.md
test_target/: CMakeLists.txt  main.cpp
